==> loudmannn/rfid-test/Core/Driver/Rfid/Adafruit_MFRC630.cpp <==
#include "Adafruit_MFRC630.h"

void Adafruit_MFRC630::write8(int8_t reg, int8_t value) {
  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Writing 0x"));
  TRACE_PRINT(value, HEX);
  TRACE_PRINT(F(" to 0x"));
  TRACE_PRINTLN(reg, HEX);

  // switch (_transport) {
  // case MFRC630_TRANSPORT_I2C:
    /* I2C */
    uint8_t txBuffer[2] = {reg, value};
    HAL_StatusTypeDef ret = HAL_I2C_Master_Transmit(_i2c, _i2c_addr, txBuffer, 2, TIMEOUT);
    if(ret != HAL_OK)
        return;
    // break;
  // default:
  //   break;
  // }
}

void Adafruit_MFRC630::writeBuffer(int8_t reg, uint16_t len, uint8_t *buffer) {
  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Writing "));
  TRACE_PRINT(len);
  TRACE_PRINT(F(" int8_t(s) to 0x"));
  TRACE_PRINTLN(reg, HEX);

  TRACE_TIMESTAMP();
  // switch (_transport) {
  // case MFRC630_TRANSPORT_I2C:
    /* I2C */
    uint8_t txBuffer[1] = {reg};
    HAL_StatusTypeDef ret = HAL_I2C_Master_Transmit(_i2c, _i2c_addr, txBuffer, 1, TIMEOUT);
    if(ret != HAL_OK)
      return;
    else
    {
      ret = HAL_I2C_Master_Transmit(_i2c, _i2c_addr, buffer, len, TIMEOUT);
      if(ret != HAL_OK)
        return;
    }
  //   break;
  // default:
  //   break;
  // }
  TRACE_PRINTLN("");
}

int8_t Adafruit_MFRC630::read8(int8_t reg) {
  uint8_t resp = 0;
  uint8_t tx[2] = {0};
  uint8_t rx[2] = {0};
  uint8_t timeout = 0xFF;

  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Requesting 1 int8_t from 0x"));
  TRACE_PRINTLN(reg, HEX);

  // switch (_transport) {
  // case MFRC630_TRANSPORT_I2C:
    /* I2C */
    uint8_t txBuffer[1] = {reg};
    uint8_t rxBuffer[1];
    HAL_StatusTypeDef ret = HAL_I2C_Master_Transmit(_i2c, _i2c_addr, txBuffer, 1, TIMEOUT);
    if(ret != HAL_OK)
      resp = 0;
    else
    {
      ret = HAL_I2C_Master_Receive(_i2c, _i2c_addr, rxBuffer, 1, TIMEOUT);
      if(ret != HAL_OK)
        resp = 0;
      else
        resp = rxBuffer[0];
    }
  //   break;
  // default:
  //   break;
  // }

  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Response = "));
  TRACE_PRINT(F(" 0x"));
  if (resp <= 0xF) {
    TRACE_PRINT(F("0"));
  }
  TRACE_PRINT(resp, HEX);
  TRACE_PRINTLN(F(""));

  return resp;
}

bool Adafruit_MFRC630::begin() {
  /* Display alert for DEBUG and TRACE output. */
  DEBUG_PRINTLN(F("\tDebug output enabled: D [+ms] Message"));
  TRACE_PRINTLN(F("\tTrace output enabled: . [+ms] Message"));
  DEBUG_PRINTLN(F(""));

  /* Enable I2C, SPI or SW serial */
  DEBUG_TIMESTAMP();
//   switch (_transport) {
//   case MFRC630_TRANSPORT_I2C:
//     DEBUG_PRINTLN(F("Initialising I2C"));
//     _wire->begin();
//     break;
//   case MFRC630_TRANSPORT_SPI:
//     DEBUG_PRINTLN(F("Initialising SPI (Mode 0, MSB, DIV16)"));
//     SPI.begin();
//     SPI.setDataMode(SPI_MODE0);
//     SPI.setBitOrder(MSBFIRST);
// #ifdef SPI_CLOCK_DIV16
//     SPI.setClockDivider(SPI_CLOCK_DIV16);
// #endif
//     break;
//   case MFRC630_TRANSPORT_SERIAL:
//     /* NOTE: 'Serial' has to be initialised in the calling sketch! */
//     break;
//   }

  /* Reset the MFRC630 if possible */
  if (_pdown) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("Resetting MFRC630"));
    HAL_GPIO_WritePin(&_pdown_port, _pdown_pin, GPIO_PIN_SET);
    HAL_GPIO_WritePin(&_pdown_port, _pdown_pin, GPIO_PIN_RESET);
    
    HAL_GPIO_WritePin(&_pdown_port, _pdown_pin, GPIO_PIN_SET);
    HAL_GPIO_WritePin(&_pdown_port, _pdown_pin, GPIO_PIN_RESET);
    /* Typical 2.5ms startup delay */
    HAL_Delay(5);
  }

  /* Check device ID for bus response */
  DEBUG_TIMESTAMP();
  DEBUG_PRINTLN(F("Checking transport layer"));

  /* Read the VERSION register */
  int8_t ver = read8(MFRC630_REG_VERSION);

  /* If ver == 0xFF or 0x0 likely a bus failure */
  if ((ver == 0xFF) || (ver == 0)) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("Transport failure!"));
    return false;
  }

  /* If !1.8, there was a problem */
  if (ver != 0x18) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("FAILED!"));
    return false;
  }

  DEBUG_TIMESTAMP();
  DEBUG_PRINT(F("IC Version = "));
  DEBUG_PRINT((ver & 0xF0) >> 4, HEX);
  DEBUG_PRINT(F("."));
  DEBUG_PRINTLN(ver & 0x0F, HEX);

  return true;
}
