==> adafruit/Adafruit_MFRC630/Adafruit_MFRC630.cpp <==
#include "Adafruit_MFRC630.h"

void Adafruit_MFRC630::write8(byte reg, byte value) {
  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Writing 0x"));
  TRACE_PRINT(value, HEX);
  TRACE_PRINT(F(" to 0x"));
  TRACE_PRINTLN(reg, HEX);

  switch (_transport) {
  case MFRC630_TRANSPORT_I2C:
    /* I2C */
    _wire->beginTransmission(_i2c_addr);
    _wire->write(reg);
    _wire->write(value);
    _wire->endTransmission();
    break;
  case MFRC630_TRANSPORT_SPI:
    /* SPI */
    digitalWrite(_cs, LOW);
    SPI.transfer((reg << 1) | 0x00);
    SPI.transfer(value);
    digitalWrite(_cs, HIGH);
    break;
  case MFRC630_TRANSPORT_SERIAL:
    /* TODO: Adjust for 10-bit protocol! */
    _serial->write((reg << 1) | 0x00);
    _serial->write(value);
    break;
  }
}

void Adafruit_MFRC630::writeBuffer(byte reg, uint16_t len, uint8_t *buffer) {
  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Writing "));
  TRACE_PRINT(len);
  TRACE_PRINT(F(" byte(s) to 0x"));
  TRACE_PRINTLN(reg, HEX);

  TRACE_TIMESTAMP();
  switch (_transport) {
  case MFRC630_TRANSPORT_I2C:
    /* I2C */
    _wire->beginTransmission(_i2c_addr);
    _wire->write(reg);
    for (uint16_t i = 0; i < len; i++) {
      _wire->write(buffer[i]);
      TRACE_PRINT(F("0x"));
      TRACE_PRINT(buffer[i], HEX);
      TRACE_PRINT(F(" "));
    }
    _wire->endTransmission();
    break;
  case MFRC630_TRANSPORT_SPI:
    /* SPI */
    digitalWrite(_cs, LOW);
    SPI.transfer((reg << 1) | 0x00);
    for (uint8_t i = 0; i < len; i++) {
      SPI.transfer(buffer[i]);
      TRACE_PRINT(F("0x"));
      TRACE_PRINT(buffer[i], HEX);
      TRACE_PRINT(F(" "));
    }
    digitalWrite(_cs, HIGH);
    break;
  case MFRC630_TRANSPORT_SERIAL:
    _serial->write((reg << 1) | 0x00);
    for (uint16_t i = 0; i < len; i++) {
      _serial->write(buffer[i]);
      TRACE_PRINT(F("0x"));
      TRACE_PRINT(buffer[i], HEX);
      TRACE_PRINT(F(" "));
    }
    break;
  }
  TRACE_PRINTLN("");
}

byte Adafruit_MFRC630::read8(byte reg) {
  uint8_t resp = 0;
  uint8_t tx[2] = {0};
  uint8_t rx[2] = {0};
  uint8_t timeout = 0xFF;

  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Requesting 1 byte from 0x"));
  TRACE_PRINTLN(reg, HEX);

  switch (_transport) {
  case MFRC630_TRANSPORT_I2C:
/* I2C */
#ifdef __SAM3X8E__
    /* http://forum.arduino.cc/index.php?topic=385377.msg2947227#msg2947227 */
    _wire->requestFrom(_i2c_addr, 1, reg, 1, true);
#else
    _wire->beginTransmission(_i2c_addr);
    _wire->write(reg);
    _wire->endTransmission();
    _wire->requestFrom((uint8_t)_i2c_addr, (uint8_t)1);
#endif
    /* Dump the response into the supplied buffer */
    resp = _wire->read();
    break;
  case MFRC630_TRANSPORT_SPI:
    /* SPI */
    digitalWrite(_cs, LOW);
    tx[0] = (reg << 1) | 0x01;
    tx[1] = 0;
    rx[0] = SPI.transfer(tx[0]);
    rx[1] = SPI.transfer(tx[1]);
    digitalWrite(_cs, HIGH);
    resp = rx[1];
    break;
  case MFRC630_TRANSPORT_SERIAL:
    tx[0] = (reg << 1) | 0x01;
    _serial->write(tx[0]);
    while (!_serial->available()) {
      delay(1);
      timeout--;
      if (timeout == 0) {
        return 0;
      }
    }
    resp = _serial->read();
    delay(1);
    /* Check for stray byte(s) */
    while (_serial->available()) {
      _serial->read();
      delay(1);
    }
    break;
  }

  TRACE_TIMESTAMP();
  TRACE_PRINT(F("Response = "));
  TRACE_PRINT(F(" 0x"));
  if (resp <= 0xF) {
    TRACE_PRINT(F("0"));
  }
  TRACE_PRINT(resp, HEX);
  TRACE_PRINTLN(F(""));

  return resp;
}

bool Adafruit_MFRC630::begin() {
  /* Display alert for DEBUG and TRACE output. */
  DEBUG_PRINTLN(F("\tDebug output enabled: D [+ms] Message"));
  TRACE_PRINTLN(F("\tTrace output enabled: . [+ms] Message"));
  DEBUG_PRINTLN(F(""));

  /* Enable I2C, SPI or SW serial */
  DEBUG_TIMESTAMP();
  switch (_transport) {
  case MFRC630_TRANSPORT_I2C:
    DEBUG_PRINTLN(F("Initialising I2C"));
    _wire->begin();
    break;
  case MFRC630_TRANSPORT_SPI:
    DEBUG_PRINTLN(F("Initialising SPI (Mode 0, MSB, DIV16)"));
    SPI.begin();
    SPI.setDataMode(SPI_MODE0);
    SPI.setBitOrder(MSBFIRST);
#ifdef SPI_CLOCK_DIV16
    SPI.setClockDivider(SPI_CLOCK_DIV16);
#endif
    break;
  case MFRC630_TRANSPORT_SERIAL:
    /* NOTE: 'Serial' has to be initialised in the calling sketch! */
    break;
  }

  /* Reset the MFRC630 if possible */
  if (_pdown != -1) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("Resetting MFRC630"));
    pinMode(_pdown, OUTPUT);
    digitalWrite(_pdown, HIGH);
    digitalWrite(_pdown, LOW);
    digitalWrite(_pdown, HIGH);
    digitalWrite(_pdown, LOW);
    /* Typical 2.5ms startup delay */
    delay(5);
  }

  /* Check device ID for bus response */
  DEBUG_TIMESTAMP();
  DEBUG_PRINTLN(F("Checking transport layer"));

  /* Read the VERSION register */
  byte ver = read8(MFRC630_REG_VERSION);

  /* If ver == 0xFF or 0x0 likely a bus failure */
  if ((ver == 0xFF) || (ver == 0)) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("Transport failure!"));
    return false;
  }

  /* If !1.8, there was a problem */
  if (ver != 0x18) {
    DEBUG_TIMESTAMP();
    DEBUG_PRINTLN(F("FAILED!"));
    return false;
  }

  DEBUG_TIMESTAMP();
  DEBUG_PRINT(F("IC Version = "));
  DEBUG_PRINT((ver & 0xF0) >> 4, HEX);
  DEBUG_PRINT(F("."));
  DEBUG_PRINTLN(ver & 0x0F, HEX);

  return true;
}
